...
import androidx.compose.ui.unit.dp
import ir.fallahpoor.releasetracker.R
import ir.fallahpoor.releasetracker.theme.ReleaseTrackerTheme
import ir.fallahpoor.releasetracker.theme.spacing

object SearchBarTags {
    const val CLOSE_BUTTON = "searchBarCloseButton"
    const val CLEAR_BUTTON = "searchBarClearButton"
    const val QUERY_TEXT_FIELD = "searchBarQueryTextField"
    const val SEARCH_BAR = "searchBar"
}

@Composable
fun SearchBar(
    modifier: Modifier = Modifier,
    shape: Shape = MaterialTheme.shapes.small,
...
