...

object AddLibraryTags {
    const val SCREEN = "screen"
    const val CONTENT = "content"
    const val TITLE = "title"
    const val BACK_BUTTON = "backButton"
    const val PROGRESS_INDICATOR = "progressIndicator"
    const val LIBRARY_NAME_TEXT_FIELD = "libraryNameTextField"
    const val LIBRARY_URL_TEXT_FIELD = "libraryUrlTextField"
    const val ADD_LIBRARY_BUTTON = "addLibraryButton"
    const val ADD_LIBRARY_BUTTON_TEXT = "addLibraryButtonText"
}
